err/pynct.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pynct'...
Compiling './lib/python3.5/site-packages/pynct/Continuer.py'...
***   File "./lib/python3.5/site-packages/pynct/Continuer.py", line 94
    raise ValueError, "There should be two points in the branch"
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pynct/FunctionSystem.py'...
***   File "./lib/python3.5/site-packages/pynct/FunctionSystem.py", line 61
    raise NotImplementedError, "apply() needs to be implemented by a subclass"
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pynct/Point.py'...
***   File "./lib/python3.5/site-packages/pynct/Point.py", line 54
    raise TypeError, "first argument should be a system"
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pynct/System.py'...
***   File "./lib/python3.5/site-packages/pynct/System.py", line 45
    raise NotImplementedError, "getResidual() needs to be implemented in subclass"
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pynct/condition'...
Listing './lib/python3.5/site-packages/pynct/demo_biology'...
Compiling './lib/python3.5/site-packages/pynct/demo_biology/calculate_eigenvalues_mpi.py'...
***   File "./lib/python3.5/site-packages/pynct/demo_biology/calculate_eigenvalues_mpi.py", line 110
    print 'het aantal bifurcatie stappen is ', num_steps
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pynct/demo_biology/doContinuation.py'...
***   File "./lib/python3.5/site-packages/pynct/demo_biology/doContinuation.py", line 123
    raise ValueError, "startpoint input in parameterlist can only be: value or file"
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pynct/demo_biology/plottools.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (plottools.py, line 60)
Listing './lib/python3.5/site-packages/pynct/demo_biology/system'...
Listing './lib/python3.5/site-packages/pynct/solver'...
Compiling './lib/python3.5/site-packages/pynct/solver/LinearSolver.py'...
***   File "./lib/python3.5/site-packages/pynct/solver/LinearSolver.py", line 25
    raise NotImplementedError, "a solve() method needs to be implemented for each linear solver"
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pynct/solver/NewtonSolver.py'...
***   File "./lib/python3.5/site-packages/pynct/solver/NewtonSolver.py", line 30
    raise TypeError, "input argument " + linear_solver + " should be a linear solver"
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pynct/solver/Solver.py'...
***   File "./lib/python3.5/site-packages/pynct/solver/Solver.py", line 21
    raise NotImplementedError, "The default parameters have to be set for each solver"
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pynct-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
